# REST_FileField

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: settings.py
src/config/: settings.py  urls.py
src/core/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
src/core/migrations/: 0001_initial.py  0002_alter_file_file.py
